--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -1,4 +1,23 @@
-:root {
+body {
+
+  background-color: #E5E5E5;
+ 
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+
+
+
+
+
+
+
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -39,4 +58,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
