--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,14 @@
 .footer {
-  background-color: #f5f5f5;
-  padding: 24px 280px;
-  font-size: 14px;
-  color: #666;
+    background-color: var(--color-white);
+    padding: 1.5rem 1rem;
+}
+
+.container {
+max-width: 1360px;
+min-width: 345px;
+margin: 0 auto;
+
+
 }
 
 .topSection {
@@ -10,8 +16,8 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  gap: 24px;
-  padding-bottom: 24px;
+  gap: 1.5rem;
+  padding-bottom: 1rem;
 }
 
 .logoBlock {
@@ -73,4 +79,13 @@
 .text {
   margin-bottom: 8px;
   line-height: 1.5;
+}
+
+@media (max-width: 768px) {
+ 
+
+  .navBlock {
+  flex-direction: column;
+  align-items: start;
+}
 }
