--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,6 +4,7 @@
 }
 
 .container {
+  
 max-width: 1360px;
 min-width: 345px;
 margin: 0 auto;
@@ -22,13 +23,13 @@ margin: 0 auto;
 
 .logoBlock {
   display: flex;
-  flex-direction: column;
-  gap: 12px;
+  gap: 2rem;
 }
 
 .socials {
   display: flex;
-  gap: 12px;
+  gap: 1rem;
+  align-items: center;
 }
 
 .socials li {
@@ -83,6 +84,10 @@ margin: 0 auto;
 
 @media (max-width: 768px) {
  
+.logoBlock {
+  flex-direction: column;
+  gap: 1rem;
+}
 
   .navBlock {
   flex-direction: column;
