--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,12 +1,26 @@
 .button {
-  padding: 16px 24px;
-  border-radius: 8px;
-  font-weight: 500;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 56px;
   font-family: var(--font-family);
+  font-weight: 500;
   font-size: 16px;
   transition: var(--transition-fast);
   cursor: pointer;
-  border: none;
+}
+
+/* Розміри */
+.large {
+  padding: 16px 24px;
+  font-size: 14px;
+  line-height: 1.14;
+}
+
+.small {
+  padding: 12px 16px;
+   font-size: 14px;
 }
 
 .primary {
@@ -22,4 +36,30 @@
   background-color: var(--color-bt-disabled);
   cursor: not-allowed;
   opacity: 0.7;
+}
+
+.contentWrapper {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.label {
+  display: inline-block;
+  
+}
+
+.arrowWrapper {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-bt); /* Можна змінити */
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+}
+
+.small .arrowWrapper {
+  width: 32px;
+  height: 32px;
 }
