--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -78,7 +78,8 @@
 
   --color-bt:#1782CA;
   --color-bt-hover:#136DAA;
-  --color-bt-disabled:#74B4DF;
+  --color-primary-200: #A2CDEA;
+  --color-primary-300:#74B4DF;
 
   
   --color-text: #111111;
