--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
 
 .header {
   width: 100%;
-  padding: 1.5rem 0;
+  padding: 1.5rem 1rem;
   background-color: #fff;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   position: sticky;
@@ -11,8 +11,8 @@
 }
 
 .container {
-  min-width: 375px;
-  max-width: 1360px;
+  min-width: 343px;
+  max-width: 1392px;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -41,7 +41,7 @@
   color: #111;
 }
 
-.button {
+/* .button {
   padding: 0.5rem 1rem;
   background-color: var(--color-primary);
   color: #fff;
@@ -53,10 +53,15 @@
 
 .button:hover {
   background-color: #004a94;
-}
+} */
 
 @media (max-width: 768px) {
  
+  .header {
+ 
+  padding: 1rem 1rem;
+  
+}
 
   .right {
   gap: 1rem;
