--- a/src/components/LinkButton/LinkButton.module.css
+++ b/src/components/LinkButton/LinkButton.module.css
@@ -4,8 +4,8 @@
 }
 
 .labelLink {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 /* Стилі для текстового овалу */
@@ -20,7 +20,11 @@
   font-family: var(--font-family);
   font-weight: 400;
   transition: var(--transition-fast);
-  padding: 0;
+}
+
+.labelLink:hover .labelContent  {
+  background-color: var(--color-bt-hover);
+  color: var(--color-white);
 }
 
 /* Стилі для іконки */
@@ -31,6 +35,11 @@
   background-color: var(--color-bt);
   border-radius: 50%;
   flex-shrink: 0;
+  transition: var(--transition-fast);
+}
+
+.labelLink:hover .iconWrapper {
+  background-color: var(--color-bt-hover);
 }
 
 /* LARGE */
@@ -46,7 +55,7 @@
 }
 
 /* SMALL */
-.small .labelContent{
+.small .labelContent {
   padding: 12px 16px;
   font-size: 14px;
   height: 40px;
