--- a/src/components/Benefits/Benefits.module.css
+++ b/src/components/Benefits/Benefits.module.css
@@ -11,7 +11,12 @@
   overflow-x: auto;
 
   margin: 320px auto;
+  background-image: url(/images/bg-benefit-desk.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
+
 
 /* .title {
     margin: 0 auto;
@@ -37,6 +42,7 @@
   .benefits {
     padding: 1rem;
     flex-direction: column;
+    background-image: url(/images/bg-benefit-mobile.jpg);
   }
   .benefits ul {
     flex-direction: column;
