--- a/src/components/Fees/FeesDesktop.module.css
+++ b/src/components/Fees/FeesDesktop.module.css
@@ -2,6 +2,7 @@
   padding: 70px 16px;
   background-color: var(--color-white);
   color: var(--color-text);
+  margin-top: 300px;
 }
 
 .container {
