--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  position: relative;
 }
 
 .container {
@@ -64,8 +65,6 @@
   transform: translateX(-50%);
   width: 100%;
   max-width: 1146px;
- 
-
 }
 
 .mockupInner {
@@ -83,33 +82,30 @@
 @media (max-width: 768px) {
   .hero {
     background-image: url(/images/bg-hero-mobile.jpg);
+    margin: 0 auto 190px;
   }
- 
-  .container {
-  min-width: 343px;
-  padding: 3rem 0 5.375rem;
- 
-} 
 
+  .container {
+    min-width: 343px;
+    padding: 3rem 0 5.375rem;
+  }
 
   .text {
-  margin-bottom: 3.77rem;
-}
+    margin-bottom: 3.77rem;
+  }
   .mockupWrapper {
-  position: static;
-  transform: none;
+    position: static;
+    transform: none;
+  }
 
-}
+  .mockupInner {
+    /* aspect-ratio: 343 / 139; */
+  }
 
-.mockupInner {
-  /* aspect-ratio: 343 / 139; */
-}
-
-.mockup {
-  object-fit: contain;
-  border-radius: 0.5rem;
- 
-}
+  .mockup {
+    object-fit: contain;
+    border-radius: 0.5rem;
+  }
 
   .title {
     font-size: 1.8rem;
