--- a/src/components/GettingStarted/GettingStarted.module.css
+++ b/src/components/GettingStarted/GettingStarted.module.css
@@ -23,7 +23,7 @@
   flex-wrap: wrap;
 }
 
-.header h2 {
+.text h2 {
   font-size: 36px;
   font-weight: 500;
   line-height: 1.22;
@@ -31,7 +31,7 @@
   text-transform: uppercase;
 }
 
-.header p {
+.text p {
   margin-top: 16px;
   color: var(--color-bg);
   max-width: 532px;
@@ -60,7 +60,7 @@
   position: absolute;
   top: 19px; /* або центр вертикально, залежить від висоти .circle */
   left: 0;
-  right: 0;
+  right: 10px;
   height: 2px;
   background-image: repeating-linear-gradient(
     to right,
@@ -70,6 +70,20 @@
     transparent 20px
   );
   z-index: 0;
+  opacity: 0.8;
+}
+
+.steps::after {
+  content: "";
+  position: absolute;
+  top: 12px; /* трохи менше, ніж top лінії */
+  right: 0;
+  width: 0;
+  height: 0;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  border-left: 10px solid white;
+  z-index: 1;
   opacity: 0.8;
 }
 
@@ -122,7 +136,7 @@
 
 @media (max-width: 768px) {
   .gettingStarted {
-    margin: 80px 0;
+    margin: 80px 0 40px;
   }
 
   .container {
@@ -131,12 +145,13 @@
     gap: 32px;
   }
 
-  .header h2 {
+  .text h2 {
     font-size: 24px;
     line-height: 1.33;
   }
 
-  .header p {
+  .text p {
+    max-width: 343px;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
@@ -146,8 +161,9 @@
    .steps {
     flex-direction: column;
     align-items: flex-start;
-    gap: 32px;
+    gap: 24px;
     padding-left: 16px;
+    /* min-height: 48px; */
   }
 
   .steps::before {
@@ -160,11 +176,24 @@
     background-image: repeating-linear-gradient(
       to bottom,
       white 0,
-      white 10px,
-      transparent 10px,
-      transparent 20px
+      white 52px,
+      transparent 52px,
+      transparent 72px
     );
   }
+
+  .steps::after {
+  content: "";
+  position: absolute;
+  top: 274px;
+  left: 29px; /* центруємо відносно лінії (бо line left: 35px) */
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 14px solid white;
+  z-index: 1;
+}
 
   .step {
     display: flex;
@@ -174,14 +203,18 @@
   }
 
   .step p{
-    max-width: 248px;
+    max-width: 193px;
     font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
 }
 
+ .step:last-child p {
+  max-width: 250px;
+}
+
   .circle {
-    margin: 0;
+    margin: 5px 0;
     flex-shrink: 0;
   }
 
