--- a/src/components/GettingStarted/GettingStarted.module.css
+++ b/src/components/GettingStarted/GettingStarted.module.css
@@ -32,7 +32,8 @@
 }
 
 .text p {
-  margin-top: 16px;
+  margin: 16px 16px 40px 0;
+
   color: var(--color-bg);
   max-width: 532px;
   font-size: 18px;
@@ -107,6 +108,8 @@
   display: flex;
   gap: 24px;
   margin-top: 28px;
+  justify-content: center;
+
 }
 
 .card {
@@ -143,6 +146,12 @@
     border-radius: 24px;
     padding: 24px 16px 48px;
     gap: 32px;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .text h2 {
