--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -73,8 +73,9 @@
 
   --color-bg: #F5F5F6;
   --color-white: #FFFFFF;
+  --color-text-title: #113453;
   --color-text: #1D1E25;
-  --color-text-muted: #555770;
+  --color-text-muted: #586673;
   --color-bt:#1782CA;
   --color-bt-hover:#136DAA;
   --color-primary-200: #A2CDEA;
