--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -18,40 +18,50 @@
 }
 
 .text {
+  max-width: 698px;
+  width: 100%;
+  position: relative;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 .badge {
-  background-color: var(--color-secondary);
-  color: var(--color-text);
-  padding: 0.4rem 1rem;
-  border-radius: 2rem;
+   display: inline-block;
+  background-color: #FCD34D;
+  color: #000;
+  padding: 6px 12px;
+  border-radius: 36px;
   font-size: 0.75rem;
-  font-weight: 500;
-  display: inline-block;
-  margin-bottom: 1rem;
+  font-weight: 600;
+  line-height: 1.25;
+  transform: rotate(-5deg); /* наклон */
+  margin-bottom: 0.5rem;
+  margin-right: auto;
+  vertical-align: middle;
+  position: absolute;
+  top: 1rem;
+  left: 0;
 }
 
 .title {
-  font-size: 2.5rem;
-  font-weight: 700;
-  line-height: 1.2;
-  color: var(--color-text);
-  margin-bottom: 1rem;
-}
-
-.highlight {
-  /* color: var(--color-primary); */
+  padding-top: 42px;
+  font-size: 3rem;
+  font-weight: 500;
+  line-height: 1.33;
+  color: var(--color-text-title);
+  margin-bottom: 1.5rem;
+  
 }
 
 .subtitle {
-  max-width: 700px;
-  margin: 0 auto 2rem;
-  color: var(--color-gray-600);
-  font-size: 1rem;
-  line-height: 1.6;
+  max-width: 698px;
+  margin: 0 auto 2.5rem;
+  color: var(--color-text-muted);
+  font-size: 1.125rem;
+  line-height: 1.56;
 }
 
 .mockupWrapper {
@@ -92,26 +102,50 @@
 
   .text {
     margin-bottom: 3.77rem;
+    max-width: 343px;
   }
+
+  .title {
+   font-size: 26px;
+   line-height: 1.385;
+  
+  
+}
+
+.subtitle {
+  max-width: 343px;
+   font-size: 0.875rem;
+  line-height: 1.43;
+}
+
+.badge {
+  
+  padding: 6px 12px;
+  border-radius: 36px;
+  font-size: 0.75rem;
+  font-weight: 600;
+  transform: rotate(-5deg); /* наклон */
+  margin-bottom: 0.5rem;
+  margin-right: auto;
+  vertical-align: middle;
+  position: absolute;
+  top: 1rem;
+  left: 0;
+}
+
   .mockupWrapper {
     position: static;
     transform: none;
   }
 
-  .mockupInner {
-    /* aspect-ratio: 343 / 139; */
-  }
+  
 
   .mockup {
     object-fit: contain;
     border-radius: 0.5rem;
   }
 
-  .title {
-    font-size: 1.8rem;
-  }
-
-  .subtitle {
-    font-size: 0.95rem;
-  }
+ 
+  
+  
 }
