--- a/src/components/Fees/FeesDesktop.module.css
+++ b/src/components/Fees/FeesDesktop.module.css
@@ -46,13 +46,10 @@
   width: 160px;
   max-width: 160px;
   min-width: 160px;
-
   position: sticky;
   left: 0;
   z-index: 1;
 }
-
-
 
 .table td:not(:first-child),
 .table th:not(:first-child) {
@@ -60,8 +57,6 @@
   max-width: 274px;
   min-width: 274px;
 }
-
-
 
 .cell {
   font-weight: 500;
@@ -77,6 +72,7 @@
   font-weight: 600;
   padding: 0.75rem 0.5rem 0.75rem 0.75rem;
   text-align: left;
+ 
 }
 
 .label {
@@ -85,14 +81,12 @@
   text-align: left;
   padding: 0.75rem 0.5rem 0.75rem 0.75rem;
   color: #586673;
-   
 }
 
 .planName {
   font-size: 1.125rem;
   font-weight: 600;
   margin-bottom: 0.5rem;
-  
 }
 
 .subtitle {
@@ -104,8 +98,8 @@
 
 .logoHeader {
   background-color: #fff;
-  /* text-align: center; */
-  padding: 1rem;
+  text-align: center;
+  padding: 0.75rem 1rem 5.875rem;
 }
 
 .row.odd {
@@ -126,8 +120,6 @@
   border-top-left-radius: 0.75rem;
   border-bottom-left-radius: 0.75rem;
 }
-
-
 
 /* Адаптивність
 @media (max-width: 768px) {
